nivasa-macros/tests/trybuild/validation_is_uuid_invalid.stderr
error: expected a string field for `#[is_uuid]`
 --> tests/trybuild/validation_is_uuid_invalid.rs:5:5
  |
5 |     #[is_uuid]
  |     ^
